fixes spacing and font styles

--- a/unum/styles/components/voice-box/_heading.scss
+++ b/unum/styles/components/voice-box/_heading.scss
@@ -4,15 +4,22 @@
     &::before {
         content: attr(data-label);
         display: block;
+        font-style: italic;
+        
+        @include set-text-style($text-style-heading-5);
 
-        @include set-text-style($text-style-content-2);
-
+        
         @media screen and (min-width: breakpoint(medium)) {
             position: absolute;
             bottom: 100%;
+            font-style: normal;
+
+            @include set-text-style($text-style-heading-2);
+
             .voice-box:not(:first-of-type) & {
                 display: none;
             }
+
         }
     }
 }
